MODIFY: JDK17 is now used by default for compilation to ensure the program's compatibility with JDK17 (the program has been tested and can run as expected on both JDK17 and JDK21)